Loading, util functions
Реализована загрузка программы в память виртуальной машины, написаны вспомогательные функции.

--- a/AileVM16/AileVM16.vcxproj
+++ b/AileVM16/AileVM16.vcxproj
@@ -127,6 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="error_codes.h" />
+    <ClInclude Include="memory.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
