--- a/AileVM16/AileVM16.vcxproj.filters
+++ b/AileVM16/AileVM16.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="util.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="in_out.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
